# local-video-subtitle-conversion-J

./: .env.example  .gitignore  README.en.md  README.md  pyproject.toml
docs/: 2026-07-13-performance-and-task-safety.md  使用指南.md  更新记录.md
docs/superpowers/plans/: 2026-07-10-local-nllb-translation.md  2026-07-10-stable-translation-pipeline.md  2026-07-11-route-one-reliability.md  2026-07-11-subtitle-layout.md  2026-07-11-video-subtitle-detection-editor.md  2026-07-14-documentation-reorganization.md  2026-07-15-stage-one-reliability.md  2026-07-16-nllb-1.3b-only.md  2026-07-16-stage-two-three.md  2026-07-17-pluggable-screen-ocr.md
src/subtitle_tool/: __init__.py  asset_cache.py  cli.py  env.py  errors.py  health.py  job_store.py  local_translate.py  local_whisper.py  macos_vision_ocr.py  media.py  media_preview.py  openai_client.py  pipeline.py  process_control.py  runtime_paths.py  screen_ocr.py  srt.py  subtitle_editor.py  subtitle_layout.py  talksmith.py  translation_cache.py  translation_engines.py  video_subtitle_detection.py  web.py  youtube.py
tests/: test_asset_cache.py  test_cli.py  test_health.py  test_job_store.py  test_local_translate.py  test_local_whisper.py  test_macos_vision_ocr.py  test_media.py  test_media_preview.py  test_openai_client.py  test_pipeline.py  test_process_control.py  test_runtime_paths.py  test_screen_ocr.py  test_srt.py  test_subtitle_editor.py  test_subtitle_layout.py  test_talksmith.py  test_translation_cache.py  test_translation_engines.py  test_video_subtitle_detection.py  test_web.py  test_youtube.py
(+10 files in other folders)
