[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "subtitle-tool"
version = "0.1.0"
description = "Generate translated SRT subtitles from embedded subtitles or video audio."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "openai>=1.0.0",
]

[project.scripts]
subtitle-tool = "subtitle_tool.cli:main"
subtitle-tool-web = "subtitle_tool.web:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.package-data]
subtitle_tool = ["web_assets/*"]
